--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,15 +1,12 @@
-## Template › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/advanced-usage.md#setting-author-url
-# -------------------------------------
-# {author_id}:
-#   name: {full name}
-#   twitter: {twitter_of_author}
-#   url: {homepage_of_author}
-# -------------------------------------
+pablo:
+  name: Pablo Martín Hidalgo
+  twitter: Tagarnina10
+  url: https://github.com/PabloMartin19/
 
 cotes:
   name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
+  twitter: cotes
+  url: https://github.com/cotes
 
 sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
