--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Europe/Madrid
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Blog personal # the main title
+title: My site # the main title
 
 tagline: "Los mejores programas son aquellos que funcionan." # it will display as the subtitle
 
